@@ -579,6 +579,7 @@ public class FormDataConsume {
   }
 
   public void clearForm() {
+    barcodeLive.setValue(null);
     amountLive.setValue(null);
     quantityUnitLive.setValue(null);
     quantityUnitsFactorsLive.setValue(null);
