@@ -730,6 +730,7 @@ public class FormDataInventory {
   }
 
   public void clearForm() {
+    barcodeLive.setValue(null);
     amountLive.setValue(null);
     quantityUnitLive.setValue(null);
     quantityUnitsFactorsLive.setValue(null);
