@@ -404,6 +404,7 @@ public class FormDataShoppingListItemEdit {
   }
 
   public void clearForm() {
+    barcodeLive.setValue(null);
     amountLive.setValue(null);
     quantityUnitLive.setValue(null);
     quantityUnitsFactorsLive.setValue(null);
