@@ -554,6 +554,7 @@ public class FormDataTransfer {
   }
 
   public void clearForm() {
+    barcodeLive.setValue(null);
     amountLive.setValue(null);
     quantityUnitLive.setValue(null);
     quantityUnitsFactorsLive.setValue(null);
