@@ -126,7 +126,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-      android:id="@+id/swipe_purchase"
+      android:id="@+id/swipe"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_marginTop="?android:actionBarSize"
