@@ -31,6 +31,9 @@
   <!-- This is an action – in English, it contains a verb.
    The string is visible after clicking long on the action button in transfer screen for example. -->
   <string name="action_transfer">Transfer</string>
+  <!-- This is an action – in English, it contains a verb.
+   The string is visible after clicking long on the action button in inventory screen for example. -->
+  <string name="action_inventory">Update amount</string>
   <!-- This is an action – in English, it contains a verb. -->
   <string name="action_consume_all">Consume all</string>
 
